Optimize some user fetching and test, and ingredient code cleanup