@@ -36,6 +36,7 @@ public class InventoryController {
     public String showInventory(Model model) {
         List<Ingredient> inventory = menuItemService.findAllIngredients();
         model.addAttribute("inventory", inventory);
+        model.addAttribute("header", "Inventory");
 
         return "management/showInventory";
     }
@@ -44,6 +45,7 @@ public class InventoryController {
     @GetMapping("/addInventory")
     public String showAddInventoryForm(Model model) {
         model.addAttribute("inventoryItem", new IngredientDTO());
+        model.addAttribute("header", "Add Inventory");
 
         return "management/addInventory";
     }
@@ -51,20 +53,22 @@ public class InventoryController {
     //shows update inventory form
     @GetMapping("/updateInventory")
     public String showUpdateInventoryForm(@RequestParam("ingredientId") int ingredientId, Model model) {
-        model.addAttribute("inventoryItem", menuItemService.findIngredientById(ingredientId));
+        Ingredient ingredient = menuItemService.findIngredientById(ingredientId);
+
+        model.addAttribute("inventoryItem", ingredient);
         model.addAttribute("ingredientId", ingredientId);
+        model.addAttribute("header", "Update " + ingredient.getIngredientName());
 
         return "management/updateInventory";
     }
 
     @GetMapping("/deleteInventory")
     public String deleteInventory(@RequestParam("ingredientId") int ingredientId, Model model) {
-        // if associated with a menu item, produce an error message
         List<MenuItemIngredient> assocMenuItems = menuItemService.deleteIngredient(ingredientId);
         int listSize = assocMenuItems.size();
 
         if (listSize > 0) {
-            Ingredient ingredient = assocMenuItems.get(0).getIngredient();
+            Ingredient ingredient = assocMenuItems.getFirst().getIngredient();
             List<Ingredient> inventory = menuItemService.findAllIngredients();
             model.addAttribute("assocMenuItemsErr",
                     "Cannot delete " + ingredient.getIngredientName() + " it is associated with " + listSize + " menu item(s)");
@@ -79,32 +83,31 @@ public class InventoryController {
     public String saveInventory(@Valid @ModelAttribute("inventoryItem") IngredientDTO ingredientDTO,
                                 BindingResult theBindingResult, Model model) {
 
+        String errorMessage = "";
+
         if (theBindingResult.hasErrors()) {
-            model.addAttribute("inventoryError", "You must correct the errors before proceeding");
-            model.addAttribute("inventoryItem", ingredientDTO);
-
-            return "management/addInventory";
-        }
-        else if (menuItemService.findIngredientByName(ingredientDTO.getIngredientName()) != null) {
-            model.addAttribute("inventoryError", "Ingredient already exists with this name");
-            model.addAttribute("inventoryItem", ingredientDTO);
-
-            return "management/addInventory";
+            errorMessage = "You must correct the errors before proceeding";
+        } else if (menuItemService.findIngredientByName(ingredientDTO.getIngredientName()) != null) {
+            errorMessage = "Ingredient already exists with this name";
         }
 
-        menuItemService.saveIngredient(ingredientDTO);
-
-        return "redirect:/system/inventory/showInventory";
+        if (errorMessage.isEmpty()) {
+            menuItemService.saveIngredient(ingredientDTO);
+            return "redirect:/system/inventory/showInventory";
+        } else {
+            model.addAttribute("errorMessage", errorMessage);
+            model.addAttribute("inventoryItem", ingredientDTO);
+            return "management/addInventory";
+        }
     }
 
-    // thymeleaf gets ingredientId from model and sends with form data as requestParam
     @PostMapping("/saveUpdatedInventory")
     public String updateInventory(@RequestParam("ingredientId") int ingredientId,
                                   @Valid @ModelAttribute("inventoryItem") IngredientDTO ingredientDTO,
                                   BindingResult theBindingResult, Model model) {
 
         if (theBindingResult.hasErrors()) {
-            model.addAttribute("inventoryError", "You must correct the errors before proceeding");
+            model.addAttribute("errorMessage", "You must correct the errors before proceeding");
             model.addAttribute("inventoryItem", ingredientDTO);
             model.addAttribute("ingredientId", ingredientId);
 
